Mon Jun 16 17:20:55 1997  Marius Vollmer  <mvo@zagadka.ping.de>

	* dynl.c (scm_dynamic_call, scm_dynamic_args_call): Wrap dynamic
 	function call in SCM_DEFER_INTS/SCM_ALLOW_INTS.
	(scm_dynamic_link, scm_dynamic_unlink, scm_dynamic_func): Always
 	call the sysdep functions with deferred ints.
	* dynl.c, dynl-dl.c, dynl-dld.c, dynl-shl.c (sysdep_dynl_link,
 	sysdep_dynl_unlink, sysdep_dynl_func): Expect to be called with
 	deferred interrupts and insert SCM_ALLOW_INTS before throwing an
 	error.

	* dynl.c (scm_dynamic_unlink, scm_dynamic_call): Return
 	SCM_UNSPECIFIED.

Sat Jun 14 19:00:58 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* scmsigs.c (sys_deliver_signals): add a comment about a probable bug.

Wed Jun 11 00:33:00 1997  Jim Blandy  <jimb@floss.red-bean.com>

	* Makefile.in: Regenerated after xtra_PLUGIN_guile_libs change in
	../configure.in.

Sun Jun  8 14:37:26 1997  Marius Vollmer  <mvo@zagadka.ping.de>

	* eval.c (scm_lookupcar1): New procedure to cope with a race
 	condition during lookup (when using threads).
	(scm_lookupcar): Implement in terms of scm_lookupcar1.
	(SCM_CEVAL): Use scm_lookupcar1 instead of scm_lookupcar in one
 	place.

Fri Jun  6 19:05:07 1997  Jim Blandy  <jimb@totoro.cyclic.com>

	* regex-posix.c (scm_regexp_exec): Use the `start' argument if
	supplied.  (Change from Tim Pierce.) 

Thu Jun  5 16:38:19 1997  Marius Vollmer  <mvo@zagadka.ping.de>

	* struct.c (init_struct): Forget to mention this in the "Wed Jun 4
 	23:47:01 1997" changelog: Slots are now initialized with `#f' by
 	default and not `()'.  `#f' is the canonical non-value in Scheme,
 	right?

Wed Jun  4 23:47:01 1997  Marius Vollmer  <mvo@zagadka.ping.de>

	* struct.c (struct_printer): New variable that holds a handle on
 	the Scheme variable *struct-printer*.  This variable can be set by
 	Scheme code to override the printing of structures.
	(scm_print_struct): If struct_printer is set, call it.  If it is